# sim-os

./: .clang-format  .clang-tidy  .gitignore  ;  CMakeLists.txt  LICENSE  README.md
examples/: simple.sl
examples/scheduler/: random.sl  scheduler.cpp  simple.sl
src/: Ast.hpp  CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Simulation.hpp  Span.hpp  Token.hpp  Util.cpp  Util.hpp  scheduler.cpp
src/gui/: CMakeLists.txt  Gui.cpp  Gui.hpp  SchedulerApp.cpp  SchedulerApp.hpp
src/gui/comparator/: Application.cpp  Application.hpp  CMakeLists.txt  comparator_main.cpp  main.cpp
src/gui/scheduler/: Application.cpp  Application.hpp  CMakeLists.txt  SchedulerApp.hpp  main.cpp  scheduler_main.cpp
src/lang/: Ast.hpp  CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Span.hpp  Token.hpp
src/os/: CMakeLists.txt  Os.cpp  Os.hpp  Process.hpp
src/simulations/: CMakeLists.txt  Scheduler.cpp  Scheduler.hpp
